@@ -1,3 +1,7 @@
+Fri Mar 23 00:42:11 GMT 2012  Olly Betts <olly@survex.com>
+
+	* php/smoketest.php: More tests of geospatial API.
+
 Thu Mar 22 23:49:50 GMT 2012  Olly Betts <olly@survex.com>
 
 	* perl/util.i.in: Avoid importing isa from UNIVERSAL to fix Perl 5.12
